# zk-mental-poker

./: .gitignore  package.json  proof.json  table_decryptions_ater_preflop.json
.github/workflows/: contract.yml
circuits/: build.sh  package-lock.json  package.json
circuits/common/: babyjubjub.circom  elgamal.circom  permutation.circom
circuits/decrypt/: decrypt.circom
circuits/shuffle_encrypt/: shuffle_encrypt.circom  shuffle_encrypt_template.circom
circuits/test/: encrypt.test.js  encrypt.test.ts  test_elgamal_decrypt.circom  test_elgamal_encrypt.circom
contracts/: Cargo.toml
contracts/poker/: .binpath  Cargo.toml  decrypt_vk_bytes.rs  dump.txt  out  verifier_constants.rs
contracts/poker-factory/: .binpath  Cargo.toml
contracts/poker-factory/app/: Cargo.toml
contracts/poker-factory/app/src/: lib.rs
contracts/poker-factory/app/src/services/: mod.rs
contracts/poker-factory/client/: Cargo.toml
contracts/poker-factory/client/src/: lib.rs
contracts/poker-factory/tests/: gtest.rs
contracts/poker/app/: Cargo.toml
contracts/poker/app/src/: lib.rs
contracts/poker/app/src/services/: curve.rs  decrypt_vk_bytes.rs  mod.rs  session.rs  shuffle_vk_bytes.rs  utils.rs  verify.rs
contracts/poker/app/src/services/game/: mod.rs  utils.rs  verify.rs
contracts/poker/client/: Cargo.toml
contracts/poker/client/src/: lib.rs
contracts/poker/tests/: gclient.rs  gtest.rs
contracts/poker/tests/test_data/: decrypt_vkey.json  encrypted_deck.json  partial_decrypt_proofs.json  partial_decryptions.json  player_pks.json  player_sks.json  shuffle_proofs.json  table_decryptions_after_preflop.json
contracts/poker/tests/test_data_gtest/: encrypted_deck.json  partial_decrypt_proofs.json  player_pks.json  player_sks.json  shuffle_proofs.json  table_decryptions.json
contracts/poker/tests/utils_gclient/: mod.rs  zk_loader.rs
contracts/poker_factory/: Cargo.toml  build.rs
contracts/poker_factory/app/: Cargo.toml
contracts/poker_factory/app/src/: lib.rs
contracts/poker_factory/app/src/services/: mod.rs  utils.rs
contracts/poker_factory/client/: Cargo.toml  build.rs
contracts/poker_factory/tests/: gtest.rs
contracts/pts/: Cargo.toml
contracts/pts/app/: Cargo.toml
contracts/pts/app/src/: lib.rs
contracts/pts/client/: Cargo.toml
contracts/pts/tests/: gtest.rs
contracts/zk-verification/app/src/services/: mod.rs
contracts/zk-verification/tests/: gtest.rs
lib/zk-shuffle-proof/src/: index.ts
lib/zk-shuffle-proof/src/shuffle/: plaintext.ts  proof.ts  utilities.ts
scripts/: run.ts
src/game/: decrypt.ts
