[workspace]

members = ["client"]


[package]
name = "poker"
version = "0.1.0"
edition = "2024"

[dependencies]
poker-app = { path = "app" }

[build-dependencies]
poker-app = { path = "app" }
sails-rs = { version = "0.8.0", features = ["wasm-builder"] }
sails-idl-gen = "0.8.0"

[dev-dependencies]
poker = { path = ".", features = ["wasm-binary"] }
poker-client = { path = "client" }
sails-rs = { version = "0.8.0", features = ["gtest"] }
tokio = { version = "1.41", features = ["rt", "macros"] }

[features]
wasm-binary = []
