[package]
name = "poker-app"
version = "0.1.0"
edition = "2024"

[dependencies]
sails-rs = "0.8.0"
gstd = { version = "1.8.0", features = ["debug"] }
gbuiltin-bls381 = "1.8.0"
hex-literal = "0.4.1"
ark-ed-on-bls12-381-bandersnatch = { version = "0.5", default-features = false }
ark-ff = { version = "0.5", default-features = false }
ark-ec = { version = "0.5", default-features = false }
pts-client = { path = "../../pts/client"}

[dev-dependencies]
serde_json = "1.0.140"
serde = "1.0.219"
num-bigint = "0.4"
rand = "0.9.1"
ark-std = "0.5"

[lib]
name = "poker_app"
path = "src/lib.rs"
